# mathengine

./: .release.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  release.toml  shell.nix
mathengine/: Cargo.toml  README.md
mathengine-cli/: Cargo.toml
mathengine-cli/src/: main.rs
mathengine-evaluator/: Cargo.toml  README.md
mathengine-evaluator/src/: error.rs  lib.rs
mathengine-lexer/: Cargo.toml  README.md
mathengine-lexer/src/: error.rs  lib.rs
mathengine-parser/: Cargo.toml  README.md
mathengine-parser/src/: ast.rs  error.rs  lib.rs  main.rs  parser.rs  types.rs
mathengine-parser/src/types/: conversion_error.rs  dimensions.rs  mod.rs  number.rs  unit_value.rs  value.rs
mathengine-units/: Cargo.toml  README.md
mathengine-units/src/: length.rs  lib.rs  temperature.rs
mathengine/src/: lib.rs
src/: lib.rs  main.rs
src/lexer/: mod.rs
src/types/: mod.rs
src/units/: length.rs  mod.rs  temperature.rs
