[package]
name = "mathengine-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Command-line interface for the mathengine mathematical expression evaluator"
publish = false

[[bin]]
name = "mathengine"
path = "src/main.rs"

[dependencies]
mathengine-lexer = { path = "../mathengine-lexer" }
mathengine-parser = { path = "../mathengine-parser" }
mathengine-evaluator = { path = "../mathengine-evaluator" }