[package]
name = "mathengine-evaluator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Type-safe evaluation engine for mathematical expressions with comprehensive unit conversion"

[dependencies]
mathengine-lexer = { version = "0.1.0", path = "../mathengine-lexer" }
mathengine-parser = { version = "0.1.0", path = "../mathengine-parser" }
mathengine-units = { version = "0.1.0", path = "../mathengine-units" }