[package]
name = "mathengine-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Robust parser for mathematical expressions with unit support using Pratt parsing"

[dependencies]
mathengine-lexer = { version = "0.1.0", path = "../mathengine-lexer" }
mathengine-units = { version = "0.1.0", path = "../mathengine-units" }