[package]
name = "mathengine-units"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Comprehensive unit conversion system supporting multiple measurement dimensions"

[dependencies]